--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
             commonsBeanutils: "1.9.3",
             xercesImpl: "2.12.0",
             httpclient:  "4.5.9",
-            testng: "6.14.3"
+            testng: "7.0.0-beta7"
         ]
     }
     ext["groovy.version"] = ver.groovy
