Exclude some non-HTTPS libraries and repo's

--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,6 @@ buildscript {
         maven { url "https://plugins.gradle.org/m2/" }
         maven { url "https://repo1.maven.org" }
         maven { url "https://plugins.gradle.org/m2/" }
-//        maven { url "http://maven.jahia.org/maven2/"}
         mavenCentral()
     }
     dependencies {
@@ -52,18 +51,14 @@ configurations {
 
 
 dependencies {
-//    compile("commons-beanutils:commons-beanutils:${ver.commonsBeanutils}")
     compile("xerces:xercesImpl:${ver.xercesImpl}")
     compile("org.apache.httpcomponents:httpclient:${ver.httpclient}")
-    testCompile("org.testng:testng:${ver.testng}") {
-        exclude group: 'com.beust', module: 'jcommander'
-    }
-
     compile("javax.xml.bind:jaxb-api:2.3.1")
     compile("com.sun.xml.bind:jaxb-impl:2.3.1")
     compile("org.codehaus.groovy:groovy-all:${ver.groovy}") {
-        exclude group: 'com.beust', module: 'jcommander'
+        exclude group: 'org.codehaus.groovy', module: 'groovy-testng'
         exclude group: 'org.testng', module: 'testng'
+        exclude group: 'com.beust', module: 'jcommander'
     }
     compile("org.apache.logging.log4j:log4j-to-slf4j:2.11.1")
     compile("org.slf4j:slf4j-simple:1.6.1")
