--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ buildscript {
             commonsBeanutils: "1.9.3",
             xercesImpl: "2.12.0",
             httpclient:  "4.5.9",
-            testng: "7.0.0-beta7"
+            testng: "7.0.0-beta7",
+            jackson_databind: "2.9.9.2"
         ]
     }
     ext["groovy.version"] = ver.groovy
@@ -66,7 +67,7 @@ dependencies {
     testCompile (
             "org.spockframework:spock-core:1.2-groovy-2.5"
     )
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.9.1'
+    compile "com.fasterxml.jackson.core:jackson-databind:${ver.jackson_databind}"
 }
 
 mainClassName = "nl.patelski.examples.diffiehellman.demo.Demo"
